traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: value unary_! is not a member of Unit
  while (!positionFinale())
         ^Snake:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
       {return (false);}
                ^Snake:12: warning: enclosing method positionFinale has result type Unit: return value discarded
       {return (false);}
        ^Snake:14: error: not found: value estfaceMur
       {gauche(); if (estfaceMur())
                      ^Snake:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            {return(true);};}
                    ^Snake:15: warning: enclosing method positionFinale has result type Unit: return value discarded
            {return(true);};}
             ^Snake:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            {return(true);}}
                    ^Snake:19: warning: enclosing method positionFinale has result type Unit: return value discarded
            {return(true);}}
             ^Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return (false);}
          ^Snake:20: warning: enclosing method positionFinale has result type Unit: return value discarded
  return (false);}
  ^